docs: document ZGC for deployments with large heaps or deep log buffers
Java 17 (the new minimum) ships production-ready ZGC. For matcher-path
latency it can hold stop-the-world pauses in the single-digit-millisecond
range (typically 1-5 ms for Java 17's non-generational ZGC) where G1
commonly sits in the 50-200 ms range under sustained allocation.

- internal docs/operations/performance-tuning.md: new GC selection
  subsection with heap-size rules of thumb (default G1 < 2 GB; G1 2-4 GB
  unless measured matcher pauses; ZGC >= 4 GB) plus container memory
  headroom guidance (1.5x -Xmx for JVM overhead + Netty direct buffers,
  plus a cgroup RSS-accounting nuance specific to ZGC's multi-mapping)
- consumer jekyll-www.mock-server.com/.../performance_configuration.html:
  new fix-table row + GC selection paragraph aligned to the same advice

Shenandoah deliberately omitted from recommendations: it is production-ready
in OpenJDK since JEP 379 (JDK 15) and remains so in OpenJDK 17, but it is
absent from Oracle JDK 17 and not universally available. ZGC is the only
low-latency GC present in every JDK 17 distribution MockServer supports.

No code or build changes.